# Pico-W-Tetris

core/: Cargo.toml
core/src/: draw_helper.rs  grid.rs  lib.rs  piece.rs  tetris.rs
frontend/: Cargo.toml
frontend/src/: main.rs
pico-w-frontend/: Cargo.toml  build.rs
pico-w-frontend/.cargo/: config.toml
pico-w-frontend/emulator/: Cargo.toml
